[project]
name = "asn_module"
authors = [
    { name = "Gurudatt Kulkarni", email = "connect@gurudatt.in"}
]
description = "ASN Module"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "python-barcode>=0.15.1",
    # "frappe~=16.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
hypothesis = ">=6.140,<7"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
    "UP037", # quoted annotations
    "UP040", # Use type aliases instead of type annotations
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.coverage.run]
source = ["asn_module"]
omit = [
	"*/tests/*",
	"*/patches/*",
	"*/config/*",
	"*/apps/erpnext/*",
	"*/apps/frappe/*",
	"*/apps/payments/*",
	"*/__init__.py",
	"*/asn_module/setup.py",
	"*/asn_module/utils/cypress_helpers.py",
	"*/asn_module/property_tests/*",
	"*/templates/pages/test_*.py",
]

[tool.coverage.report]
fail_under = 96
show_missing = true
skip_empty = true
omit = [
	"*/tests/*",
	"*/patches/*",
	"*/config/*",
	"*/apps/erpnext/*",
	"*/apps/frappe/*",
	"*/apps/payments/*",
	"*/__init__.py",
	"*/asn_module/setup.py",
	"*/asn_module/utils/cypress_helpers.py",
	"*/asn_module/property_tests/*",
	"*/test_*.py",
]
exclude_lines = [
	"pragma: no cover",
	"if __name__ == .__main__.",
	"raise NotImplementedError",
]
